--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,15 @@
+:root {
+    --blue: #3B63DB;
+    --green: #69D38C;
+    --black: #191B1F;
+}
+
+*, html, body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .flex {
     display: flex;
 }
